[project]
name = "calscripts"
version = "0.1.0"
description = "A collection of calendar scripts to help you stay organized"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "msal>=1.34.0",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "tomli>=2.4.0",
]

[tool.uv]
package = false
